--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<h1 class="text-3xl font-bold underline">
-  Hello world!
-</h1>
+   <div class="min-h-screen bg-gray-50">
+      <main class="container mx-auto px-4 py-8">
+        <router-outlet />
+      </main>
+    </div>
