feat: agregar navbar implementacion de las rutas de inicio de sesion y registro.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
    <div class="min-h-screen bg-gray-50">
+      <app-navbar></app-navbar>
       <main class="container mx-auto px-4 py-8">
         <router-outlet />
       </main>
