--- a/src/app/features/espacios/components/modal-reserva/modal-reserva.component.html
+++ b/src/app/features/espacios/components/modal-reserva/modal-reserva.component.html
@@ -1,11 +1,10 @@
-
-    <div class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4 z-50"
+  <div class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4 z-50"
          (click)="cerrarModal($event)">
-      <div class="bg-white rounded-2xl max-w-md w-full overflow-hidden shadow-xl"
+      <div class="bg-white rounded-xl max-w-md w-full overflow-hidden shadow-xl"
            (click)="$event.stopPropagation()">
         
         <!-- Header del modal -->
-        <div class="bg-primary-500 text-white p-6">
+        <div class="bg-primary-500 text-white p-5">
           <div class="flex items-center justify-between">
             <h3 class="text-xl font-bold">Confirmar Reserva</h3>
             <button 
@@ -95,4 +94,3 @@
         </div>
       </div>
     </div>
-  
